swap mock content for real resale market cards — 10 items, 7 categories, updated ticker

--- a/index.html
+++ b/index.html
@@ -960,95 +960,155 @@ body {
 // THRIFTBUD — Interactive Logic
 // ═══════════════════════════════════════════════════
 
-// ─── Feed Data (Mock) ───
+// ─── Feed Data ───
 const ITEMS = [
   {
     id: 1,
-    name: 'Nike Dunk Low "Panda"',
-    emoji: '👟',
-    category: 'Sneakers',
-    condition: 'DS/New',
-    paid: 45,
-    estValue: [120, 150],
-    user: { name: 'thriftqueen', avatar: '👩‍🦰' },
-    votes: { flip: 342, pass: 58 },
-    views: 2847,
-    time: '12m ago',
+    name: 'Griswold #8 Cast Iron Skillet',
+    emoji: '🍳',
+    category: 'Vintage Kitchen',
+    condition: 'Good — light patina',
+    paid: 4,
+    estValue: [120, 180],
+    user: { name: 'estate_hunter', avatar: '🧔🏽' },
+    votes: { flip: 1847, pass: 63 },
+    views: 12403,
+    time: '18m ago',
     isLive: true,
     trending: true,
   },
   {
     id: 2,
-    name: 'Vintage Pendleton Wool Shirt',
-    emoji: '🧥',
-    category: 'Vintage',
-    condition: 'Good',
-    paid: 8,
-    estValue: [80, 120],
-    user: { name: 'flipking', avatar: '👨🏾' },
-    votes: { flip: 891, pass: 42 },
-    views: 5103,
-    time: '34m ago',
-    isLive: false,
-    trending: true,
-  },
-  {
-    id: 3,
-    name: 'Coach Bag — Real or Fake?',
+    name: 'Coach Willis Bag — Vintage?',
     emoji: '👜',
-    category: 'Bags',
-    condition: 'Fair',
-    paid: 25,
-    estValue: [0, 30],
-    user: { name: 'newbie_seller', avatar: '🧑🏻' },
-    votes: { flip: 67, pass: 445 },
-    views: 1289,
-    time: '1h ago',
-    isLive: false,
-    trending: false,
-  },
-  {
-    id: 4,
-    name: 'KitchenAid Artisan Mixer',
-    emoji: '🍳',
-    category: 'Home',
-    condition: 'Excellent',
-    paid: 35,
-    estValue: [150, 200],
-    user: { name: 'estate_hunter', avatar: '👩🏽' },
-    votes: { flip: 1203, pass: 31 },
-    views: 8402,
-    time: '2h ago',
+    category: 'Designer Bags',
+    condition: 'Fair — some scuffing',
+    paid: 18,
+    estValue: [85, 140],
+    user: { name: 'bagcheck_queen', avatar: '👩🏻' },
+    votes: { flip: 423, pass: 287 },
+    views: 3891,
+    time: '42m ago',
     isLive: true,
     trending: true,
   },
   {
+    id: 3,
+    name: 'Levi\'s 501 "Big E" Selvedge Denim',
+    emoji: '👖',
+    category: 'Vintage Denim',
+    condition: 'Good — natural fading',
+    paid: 6,
+    estValue: [150, 300],
+    user: { name: 'denim_dealer', avatar: '🤠' },
+    votes: { flip: 2134, pass: 41 },
+    views: 9877,
+    time: '1h ago',
+    isLive: false,
+    trending: true,
+  },
+  {
+    id: 4,
+    name: 'Nintendo Wii Console — No Cables',
+    emoji: '🎮',
+    category: 'Electronics',
+    condition: 'Unknown — untested',
+    paid: 15,
+    estValue: [20, 35],
+    user: { name: 'newbie_flip', avatar: '🧑🏼' },
+    votes: { flip: 89, pass: 612 },
+    views: 2104,
+    time: '2h ago',
+    isLive: false,
+    trending: false,
+  },
+  {
     id: 5,
-    name: 'Supreme Box Logo Hoodie',
-    emoji: '🔴',
-    category: 'Streetwear',
-    condition: 'Excellent',
-    paid: 120,
-    estValue: [350, 500],
-    user: { name: 'hype_flipper', avatar: '😎' },
-    votes: { flip: 567, pass: 89 },
-    views: 4201,
-    time: '45m ago',
+    name: 'Pendleton Wool Blanket — Chief Joseph',
+    emoji: '🧶',
+    category: 'Vintage Home',
+    condition: 'Excellent — no moth damage',
+    paid: 12,
+    estValue: [120, 200],
+    user: { name: 'blanket_baron', avatar: '😎' },
+    votes: { flip: 967, pass: 54 },
+    views: 5632,
+    time: '35m ago',
     isLive: true,
     trending: true,
   },
   {
     id: 6,
-    name: 'Vintage Levi 501 Jeans',
-    emoji: '👖',
-    category: 'Vintage',
-    condition: 'Good',
-    paid: 12,
-    estValue: [65, 95],
-    user: { name: 'denim_dealer', avatar: '🤠' },
-    votes: { flip: 445, pass: 72 },
-    views: 3100,
+    name: 'Pyrex Pink Gooseberry Mixing Bowl',
+    emoji: '🥣',
+    category: 'Vintage Kitchen',
+    condition: 'Good — minor paint wear',
+    paid: 3,
+    estValue: [45, 90],
+    user: { name: 'pyrex_plug', avatar: '👩🏾' },
+    votes: { flip: 534, pass: 198 },
+    views: 3217,
+    time: '1h ago',
+    isLive: false,
+    trending: true,
+  },
+  {
+    id: 7,
+    name: 'Jordan 4 "Military Black" — DS w/ Box',
+    emoji: '👟',
+    category: 'Sneakers',
+    condition: 'DS/New — box included',
+    paid: 45,
+    estValue: [140, 170],
+    user: { name: 'sole_source', avatar: '👨🏾' },
+    votes: { flip: 1456, pass: 112 },
+    views: 8934,
+    time: '8m ago',
+    isLive: true,
+    trending: true,
+  },
+  {
+    id: 8,
+    name: 'Lululemon Align Leggings — Size 6',
+    emoji: '🧘',
+    category: 'Athleisure',
+    condition: 'Good — light pilling',
+    paid: 14,
+    estValue: [40, 55],
+    user: { name: 'rack_raider', avatar: '💪' },
+    votes: { flip: 312, pass: 278 },
+    views: 2876,
     time: '3h ago',
+    isLive: false,
+    trending: false,
+  },
+  {
+    id: 9,
+    name: 'Eames-Era Teak Credenza — 60"',
+    emoji: '🪑',
+    category: 'MCM Furniture',
+    condition: 'Good — surface scratches',
+    paid: 75,
+    estValue: [400, 800],
+    user: { name: 'mcm_hunter', avatar: '🏠' },
+    votes: { flip: 1789, pass: 34 },
+    views: 11204,
+    time: '45m ago',
+    isLive: true,
+    trending: true,
+  },
+  {
+    id: 10,
+    name: 'Bose QuietComfort 35 II — No Case',
+    emoji: '🎧',
+    category: 'Electronics',
+    condition: 'Good — needs ear pads',
+    paid: 22,
+    estValue: [70, 100],
+    user: { name: 'tech_thrift', avatar: '🤓' },
+    votes: { flip: 445, pass: 167 },
+    views: 3540,
+    time: '2h ago',
     isLive: false,
     trending: true,
   },
@@ -1056,16 +1116,18 @@ const ITEMS = [
 
 // ─── Ticker ───
 const TICKER_EVENTS = [
-  { text: '<strong>thriftqueen</strong> posted a Nike Dunk', color: 'var(--neon)' },
-  { text: '<strong>flipking</strong> voted FLIP on Pendleton', color: 'var(--neon)' },
-  { text: '<strong>newbie_seller</strong> got 400+ PASS votes', color: 'var(--hot)' },
-  { text: '<strong>estate_hunter</strong> confirmed +$165 profit', color: 'var(--neon)' },
-  { text: '<strong>hype_flipper</strong> hit 90% prediction accuracy', color: 'var(--amber)' },
-  { text: '<strong>denim_dealer</strong> posted Vintage Levi\'s', color: 'var(--cyan)' },
-  { text: '<strong>thriftqueen</strong> ranked #1 this week', color: 'var(--amber)' },
-  { text: '<strong>newflip23</strong> joined ThriftBud', color: 'var(--violet)' },
-  { text: '<strong>goodwillguru</strong> sold for 12x profit', color: 'var(--neon)' },
-  { text: '<strong>vintagefind</strong> posted a Patagonia jacket', color: 'var(--cyan)' },
+  { text: '<strong>estate_hunter</strong> found a Griswold skillet for $4', color: 'var(--neon)' },
+  { text: '<strong>denim_dealer</strong> confirmed Big E Levi\'s — 50x return', color: 'var(--neon)' },
+  { text: '<strong>newbie_flip</strong> got 600+ PASS votes on a Wii', color: 'var(--hot)' },
+  { text: '<strong>sole_source</strong> posted Jordan 4s — community split', color: 'var(--cyan)' },
+  { text: '<strong>mcm_hunter</strong> listed credenza — $75 → $800 flip', color: 'var(--neon)' },
+  { text: '<strong>bagcheck_queen</strong> needs help: real Coach or fake?', color: 'var(--amber)' },
+  { text: '<strong>pyrex_plug</strong> scored Gooseberry for $3', color: 'var(--neon)' },
+  { text: '<strong>blanket_baron</strong> hit 95% prediction accuracy', color: 'var(--amber)' },
+  { text: '<strong>rack_raider</strong> posted Lululemon — votes are 50/50', color: 'var(--cyan)' },
+  { text: '<strong>tech_thrift</strong> flipped Bose QC35 for 4x profit', color: 'var(--neon)' },
+  { text: '<strong>goodwill_guru</strong> joined ThriftBud', color: 'var(--violet)' },
+  { text: '<strong>vintagefind</strong> posted a Carhartt jacket', color: 'var(--cyan)' },
 ];
 
 function buildTicker() {
